# paystackPY

./: LICENSE  README.md  pyproject.toml
paystackPY/: __init__.py
