[tool.poetry]
name = "paystackClientApi"
version = "0.1.1"
description = "Paystack api implemented as a package, paystack-client-Api is a simple project created by Joel .A."
authors = ["AnozieChibuike <chibuikeanozie0@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
